Add Monte Carlo theory

--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -14,10 +14,18 @@
 % Abbreviations
 \newcommand{\td}{two\--dimensional}
 \newcommand{\thd}{three\--dimensional}
+\newcommand{\mc}{Monte Carlo}
 
 % Maths
 \newcommand{\ki}{\langle k \rangle}
 \newcommand{\kii}{\langle k^2 \rangle}
 \newcommand{\sumk}{\sum\limits_k}
 \newcommand{\sumjk}{\sum\limits_{jk}}
+\newcommand{\ham}{\mathcal{H}\left(\mathbf{p},\mathbf{r}\right)}
+\newcommand{\ken}{\mathcal{K}\left(\mathbf{p}\right)}
+\newcommand{\pen}{\mathcal{U}\left(\mathbf{r}\right)}
+\newcommand{\obs}{\mathcal{A}\left(\mathbf{r}\right)}
+\newcommand{\kb}{k_\text{B}}
+\newcommand{\dd}{\text{d}}
+\newcommand{\obj}{\Omega}
 
