--- a/text/methods.tex
+++ b/text/methods.tex
@@ -362,6 +362,13 @@ More specifically, the random limit can be deduced by evaluating $\frac{\partial
 \end{equation}
 Hence all systems with $\alpha>-\mu_2/\ki^2$ have more small\--large ring  adjacencies than would be expected from chance whilst conversely those with $\alpha<-\mu_2/\ki^2$ have more small\--small and large\--large pairings.
 
+\begin{figure}[tb]
+     \centering
+      \includegraphics[width=8cm]{./figures/methods/aw_demo.pdf}
+     \caption{Calculation of an \aw{} fit for three configurations (shown in figure \ref{fig:zach}(a)\--(c)). The value of the $\alpha$ parameter quantifies the tendency of small rings to be adjacent to large rings, with a larger value indicating stronger small\--large ring correlations.}
+     \label{fig:awdemo}
+\end{figure}
+
 Despite the \aw{} law being purely empirical and there being no topological requirement for $m_k$ to vary systematically $k$, the law does seem to hold well for a diverse set of physical systems.
 The law is well used for example in studies of materials, emulsions, biological tissues as well as in planetary science \cite{LeRoux2013,Roy2018,Noever1992,Mombach1993,Pedro2008}.
 As an example of the calculation of the \aw{} parameter, the plots of the fits for the systems in figure \ref{fig:zach} are presented in figure \ref{fig:awdemo}, along with the corresponding $\alpha$ parameters.
@@ -369,14 +376,7 @@ This demonstrates two contrasting aspects of the \aw{} law.
 Firstly the law holds very well, especially given the fact that these samples consist of just twenty rings each.
 However, it also demonstrates that the law is by no means exact and that some greyness is inevitably introduced during the linear regression.
 
-\begin{figure}[h]
-     \centering
-      \includegraphics[width=8cm]{./figures/methods/aw_demo.pdf}
-     \caption{Calculation of an \aw{} fit for three configurations (shown in figure \ref{fig:zach}(a)\--(c)). The value of the $\alpha$ parameter quantifies the tendency of small rings to be adjacent to large rings, with a larger value indicating stronger small\--large ring correlations.}
-     \label{fig:awdemo}
-\end{figure}
-
-\section{\mc{} Methods}
+\section{General \mc{} Methods}
 \label{sec:mc}
 
 \mc{} methods are a class of computational algorithms designed to solve complex problems stochastically.
@@ -384,7 +384,7 @@ These normally fall into the broad categories of calculating integrals, sampling
 Since their initial development in the mid\--20\th{} century, such methods have become an invaluable tool for solving problems in the physical sciences.
 \mc{} methods are used in this context for calculating thermodynamic averages of properties in equilibrium systems; finding the minima in potential energy surfaces of small molecules, glasses, crystals and biomolecules; as well as non\--equilibrium simulations such as growth of crystals and thin\--films \cite{Landau2014,Wales1999,Levi1997,Ratsch2003,Kob1999,Jensen1999}.
 In this thesis these \mc{} methods  will be used in a variety of contexts chapter xxx \davidnote{fill this in}.
-Therefore, the general theory is presented here along with specific details of two established methods: bond switching and hard particle \mc{}.
+Therefore, the general theory is presented here along with specific details of two established methods: bond switching and hard particle \mc{} given in the following section.
 
 \subsection{Statistical Mechanics}
 
@@ -535,13 +535,14 @@ Instead only the ideal form of the limiting probability distribution, $\mathbf{P
 A practical solution to this problem is provided by the Metropolis algorithm.
 
 \subsection{Metropolis Algorithm}
+\label{ssec:metropolis}
 
 The Metropolis algorithm gives a prescription of how to construct a transition matrix, $\bm{\pi}$, with the requisite properties that samples the Boltzmann distribution \cite{Metropolis1953}.
 Firstly, combining equations \eqref{eq:tmrowsum} and \eqref{eq:mcmceig} gives a condition on the transition matrix known as global balance:
 \begin{equation}
 	\sum_j \mathcal{P}\left(\mathbf{r}_i\right)\pi_{ij} = \sum_j \mathcal{P}\left(\mathbf{r}_j\right)\pi_{ji}\,.
 \end{equation} 
-Whilst it is possible to construct transition matrices which satisfy only global balance \cite{Manousiouthakis1999,Suwa2010,Michel2018}, it is practically simpler to satisfy global balance by applying the stronger condition of detailed balance:
+Whilst it is possible to construct transition matrices which satisfy only global balance \cite{Manousiouthakis1999,Suwa2010,Michel2014}, it is practically simpler to satisfy global balance by applying the stronger condition of detailed balance:
 \begin{equation}
 	\mathcal{P}\left(\mathbf{r}_i\right)\pi_{ij} = \mathcal{P}\left(\mathbf{r}_j\right)\pi_{ji}\,.
 \end{equation}
@@ -621,6 +622,13 @@ This in itself is an extensive area of study and there are many approaches such 
 This thesis will use simulated annealing, which can be considered an extension to Metropolis \mc{} \cite{Kirkpatrick1983}.
 In addition simulated annealing is effective for searching surfaces with many similar minima as in glasses \-- the name reflecting its origins in the analogous process in metallurgy to generate defect free metals.
 
+\begin{figure}[tb]
+     \centering
+    \includegraphics[width=0.45\textwidth]{./figures/methods/mc_2d_sa.pdf}
+      \caption{Demonstration of the simulated annealing algorithm on a \td{} potential energy surface, with states coloured by temperature (red$\rightarrow$blue indicating hot$\rightarrow$cold. As the temperature is reduced the state converges on the global minimum.}
+      \label{fig:montecarloint5}
+\end{figure}
+
 The simulated annealing algorithm proceeds as follows.
 The system of interest is first thermalised by performing Metropolis \mc{} at infinite temperature \ie{} accepting every move. 
 The system is then gradually cooled to zero temperature, with the Metropolis criterion \eqref{eq:objmetropolis} reducing the proportion of accepted moves.
@@ -631,9 +639,110 @@ As before, one can then cycle the simulated annealing, repeatedly heating and co
 The simulated annealing algorithm is demonstrated with the \td{} potential energy surface in figure \ref{fig:montecarloint5}.
 As can be seen at high temperature the entire surface is sampled, overcoming all energy barriers, but as cooling takes place the system settles into the low energy regions of the surface, finally terminating in the global minimum.
 
-\begin{figure}[h]
+\section{Hard Particle \mc}
+
+Hard particle Monte Carlo is one of the most well\--established computational methods in statistical physics.
+Through its simplicity it is able to provide insight into the fundamental behaviour of particle systems and simulations of increasing size are still performed this century \cite{Isobe2016,Bernard2009,Anderson2013,Isobe2015}.
+In this thesis it will be used to generate ring systems in the form of Voronoi tessellations (see sec \davidnote{link to voronoi}), in analogy to experimental colloidal systems \cite{Thorneywork2017}.
+
+\subsection{Hard Particle Model}
+
+Hard particle models are applicable over a range of dimensions.
+In two dimensions the system consists of an arrangement of hard disks and in three dimensions hard spheres.
+One can also take a quasi \td{} system, which comprises hard spheres confined to a plane.
+Regardless of the dimensionality, the central principle is that no two particles in the system can have any degree overlap.
+Formally, if the particle radii are denoted by $R_i$ and the distance between any pair of particle centroids by $d_{ij}$, the pair potential is:
+\begin{equation}
+	\mathcal{U}_{ij} = \begin{cases}
+	\infty \quad &d_{ij}<R_i+R_j \\
+	0 \quad &d_{ij}\geq R_i+R_j 
+	\end{cases} \,.
+\end{equation}
+As the total energy is simply then
+\begin{equation}
+	\mathcal{U} = \sum_{i<j} \mathcal{U}_{ij}\,,
+\end{equation}
+it follows that if any pair of particles have overlap the system energy is infinite and the Boltzmann weighting is zero.
+
+\subsection{\mc{} Simulation} 
+
+Hard particle systems can be simulated using the Metropolis algorithm outlined in section \ref{ssec:metropolis}.
+The system is initialised by selecting a random non\--overlapping configuration.
+This can be achieved easily for low to medium densities by a greedy algorithm like random sequential addition, where particles are added successively in a manner which does not overlap with any previous particles \cite{Widom1966}.
+For higher packing fractions a more sophisticated algorithm is needed \davidnote{Find refs}.
+
+Once the initial configuration has been generated, it is evolved via two \mc{} moves.
+The first is the displacement move, whereby a random particle is selected and translated according to a random vector with elements generated uniformly in the range $\left[-\delta,\delta\right]$.
+If the displacement introduces any particle overlaps it is rejected, otherwise the system is updated to the new configuration, as illustrated in figure \ref{fig:hardmc1}\--\ref{fig:hardmc3}.
+The value of $\delta$ is chosen for each simulation such that the proportion of accepted moves is $\sim 50\%$, allowing for efficient searching of configurational space.
+The optimal value can be determined by continuous adjustment during equilibration.
+
+The second is the swap move, where two random particles are selected their radii exchanged \cite{Grigera2001,Ninarello2017}. 
+Once again a swap move is only accepted if it does not lead to any overlapping particles and is demonstrated in figure \ref{fig:hardmc4}\--\ref{fig:hardmc6}.
+The swap move is used to increase the efficiency in simulations of polydisperse particles and is an example of how the design of \mc{} moves can be flexible and they do not have to have a direct physical basis. 
+The swap move is attempted for every ten displacement moves. 
+
+\begin{figure}[bt]
      \centering
-    \includegraphics[width=0.45\textwidth]{./figures/methods/mc_2d_sa.pdf}
-      \caption{Demonstration of the simulated annealing algorithm on a \td{} potential energy surface, with states coloured by temperature (red$\rightarrow$blue indicating hot$\rightarrow$cold. As the temperature is reduced the state converges on the global minimum.}
-      \label{fig:montecarloint5}
+     
+     \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_a.pdf}
+         \caption{}
+         \label{fig:hardmc1}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_b.pdf}
+         \caption{}
+         \label{fig:hardmc2}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_c.pdf}
+         \caption{}
+         \label{fig:hardmc3}
+     \end{subfigure}
+     \hfill
+     
+       \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_d.pdf}
+         \caption{}
+         \label{fig:hardmc4}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_e.pdf}
+         \caption{}
+         \label{fig:hardmc5}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.25\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/methods/mc_move_f.pdf}
+         \caption{}
+         \label{fig:hardmc6}
+     \end{subfigure}
+     \hfill
+   
+     \caption{Demonstration of two displacement (a)\--(c) and two swap (d)\--(f) moves in hard particle \mc.
+     In displacement moves, particles are randomly selected and assigned a trial random displacement vector (a). In swap moves, two particles are randomly selected and their radii trial swapped (b). The trial move is then examined to see if it introduces any particle overlaps (b),(e). If there are no overlaps (green), then the trial move is accepted and the system updated but otherwise (red) the move is rejected and the system returns to the previous state (c),(f).
+     }
+     \label{fig:hardmc}
 \end{figure}
+
+\begin{figure}[tb]
+	\centering
+	\includegraphics[width=8cm]{./figures/methods/mc_move_g.pdf}
+	\caption{Simulation of bulk system is achieved using periodic boundary conditions, where a central cell is surrounded by repeated images of itself. A particle of interest (dark blue) then interacts with the nearest images of every other particle (light blue).}
+	\label{fig:pbc}
+\end{figure}
+
+Finally, to remove the presence of an interface in the system, simulation is performed with periodic boundary conditions.
+In this scheme the central simulation cell is repeated to form an infinite lattice, so that every particle experiences a bulk environment.
+Coupled with this is the use of the minimum image convention, where each particle then only interacts with the nearest repeated image of all the remaining particles.
+This is illustrated in figure \ref{fig:pbc}. 
