--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -15,6 +15,10 @@
 \newcommand{\td}{two\--dimensional}
 \newcommand{\thd}{three\--dimensional}
 \newcommand{\mc}{Monte Carlo}
+\newcommand{\sioii}{SiO$_2$}
+\newcommand{\sioiii}{SiO$_3$}
+\newcommand{\sioiv}{SiO$_4$}
+\newcommand{\geoii}{GeO$_2$}
 
 % Maths
 \newcommand{\ki}{\langle k \rangle}
@@ -28,4 +32,4 @@
 \newcommand{\kb}{k_\text{B}}
 \newcommand{\dd}{\text{d}}
 \newcommand{\obj}{\Omega}
-
+\newcommand{\br}[2]{\left\{#1,#2\right\}}
