--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -1,13 +1,13 @@
 \chapter{Introduction}
 \label{ch:intro}
 
-%\section{Background}
-%\label{s:background}
+\section{Background}
+\label{s:background}
 
 The notion of describing amorphous materials as random networks dates back to \zach, who in 1932 sketched a simple diagram of a \td{} glass \cite{Zachariasen1932}.
 This configuration, reproduced in figure \ref{fig:zach_orig}, showed a collection of percolating rings with an absence of long\--range order.
 At the time, \zach's image was intended only as schematic to illustrate the analogous effects in \thd{} glasses.
-However, some eighty years later, modern synthesis techniques have led to a range of \td{} materials including amorphous carbon, silica and germania which can be considered realisations of \zach's glass \cite{Kotakoski2011,Robertson2012,Huang2012,Lichtenstein2012b,Lewandowski2018}.
+However, some eighty years later, modern synthesis techniques have led to a range of \td{} materials including amorphous carbon, silica and germania which can be considered realisations of \zach's glass \cite{Kotakoski2011,Robertson2012,Huang2012,Lichtenstein2012a,Shaikhutdinov2013,Lewandowski2018,Lewandowski2019}.
 These advances may yet represent a watershed moment in chemistry, facilitating the development of a wide range of technologically useful materials with applications including catalysis and gas separation \cite{Trogadas2014,Sun2015a,Buchner2017}.
 
 It is clear that understanding the structure of amorphous materials is key to this aim.
@@ -21,7 +21,7 @@ This is readily explainable via graph theoretic arguments, simply resulting from
 Intuitively from chemistry we know this to be true: a pristine graphene sheet is a hexagonal net and although a Stone\--Wales defect introduces pentagons and heptagons, they occur in pairs to preserve the overall mean ring size \cite{Stone1986}.
 
 The next level of information is then the explicit distribution of polygon sizes, also known as the ring statistics.
-With the constraint of a fixed mean, the ring statistics were shown to be relatively well defined, following a log\--normal or maximum entropy distribution \cite{Shackelford1981,Lemaitre1993,Lichtenstein2012}.
+With the constraint of a fixed mean, the ring statistics were shown to be relatively well defined, following a lognormal or maximum entropy distribution \cite{Shackelford1981,Lemaitre1993,Lichtenstein2012}.
 However, the ring statistics alone are not sufficient to fully describe the network topology. 
 This is because the same set of rings can be arranged in a large number of different ways.
 Consider again \zach's original configuration. 
