--- a/thesis.tex
+++ b/thesis.tex
@@ -205,8 +205,9 @@
 \flushbottom
 %\include{text/chapter_template}
 \include{text/introduction}
+\include{text/theory}
 \include{text/methods}
-%\include{text/bilayers}
+\include{text/bilayers}
 
 
 
