--- a/text/methods.tex
+++ b/text/methods.tex
@@ -235,7 +235,7 @@ Using multiple seeds in this way helps to identify if any such behaviour is pres
 If it leads to significant differences in the computed averages, more advanced techniques using enhanced sampling may have to be employed \cite{Torrie1977,Earl2005}.
 
 \subsection{Global Optimisation \& Simulated Annealing}
-\label{ssec:simulatedannealing}
+\label{s:simulatedannealing}
 
 So far in this section it has been shown how Monte Carlo methods can be used perform importance sampling of potential energy surfaces.
 These methods can also be used to solve the related problem of finding global minima in potential energy surfaces and other more general functions.
@@ -282,7 +282,7 @@ The basic algorithmic details are described in this section, with extensions giv
 
 \subsection{Algorithmic Details} 
 
-The \td{} bond switching algorithm essentially follows the prescription of simulated annealing in section \ref{ssec:simulatedannealing}.
+The \td{} bond switching algorithm essentially follows the prescription of simulated annealing in section \ref{s:simulatedannealing}.
 A skeleton algorithm structure is outlined below, followed by specific details \cite{Kumar2012}.
 Visualisations are provided for reference in figure \ref{fig:bsmc}.
 
