--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,7 @@
 % Either way, you'll have to choose and configure an appropriate bibliography format...
 
 % The science-type option: numerical in-text citation with references in order of appearance.
-\usepackage[style=numeric-comp, sorting=none, backend=biber, doi=false, isbn=false, url=false]{biblatex}
+\usepackage[style=numeric-comp, sorting=none, backend=biber, doi=false, isbn=false, url=false, arxiv=false]{biblatex}
 \newcommand*{\bibtitle}{References}
 
 % The humanities-type option: author-year in-text citation with an alphabetical works cited.
@@ -208,7 +208,7 @@
 \include{text/theory}
 \include{text/methods}
 \include{text/bilayers}
-
+\include{text/targeted_opt}
 
 
 %% APPENDICES %% 
